--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <nav class="navbar">
         <h1 class="logo">ADVENTURE</h1>
         <ul class="nav-links">
-            <li><a href="#"></a>Home</li>
+            <li class="active"><a href="#"></a>Home</li>
             <li><a href="#"></a>Tours</li>
             <li><a href="#"></a>Explore</li>
             <li><a href="#"></a>About</li>
             <li class="ctn"><a href="#"></a>Contact</li>
         </ul>
+        <img src="./img/menu-btn.png" alt="" class="menu-btn">
     </nav>
 
     <header>
@@ -27,5 +28,16 @@
             <a href="#" class="ctn">Learn More</a>
         </div>
     </header>
+
+    <script>   
+        const menuBtn = document.querySelector('.menu-btn')
+        const navlinks = document.querySelector('.nav-links')
+
+        menuBtn.addEventListener('click',()=>{
+            navlinks.classList.toggle('mobile-menu')
+        })
+    </script>
+
+
 </body>
 </html>
